<resources>
    <string name="app_name">SANDBAKS</string>
    <string name="sandbaks">SANDBAKS</string>
    <string name="account_settings">Account Settings</string>
    <string name="play">PLAY</string>
    <string name="gmail_com">*@gmail.com</string>
    <string name="account_creation">Account Creation</string>
    <string name="confirm_password">CONFIRM PASSWORD:</string>
    <string name="password">PASSWORD:</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email_address">EMAIL ADDRESS:</string>
    <string name="username">USERNAME:</string>
    <string name="re_type_password_here">re-type password here</string>
    <string name="your_in_game_name_here">your in game name here</string>
    <string name="type_password_here">type password here</string>
    <string name="back">BACK</string>
    <string name="no_account_yet_sign_up_here">No account yet? Sign up here</string>
    <string name="name_here">Name here</string>
    <string name="log_in">LOG IN</string>
    <string name="passwordSignIn">PASSWORD:</string>
    <string name="usernameSignIn">USERNAME:</string>
    <string name="password_here">Password here</string>
    <string name="log_in_here">LOG IN HERE</string>
    <string name="password_here1">Password Here</string>
    <string name="guest">Guest</string>
    <string name="welcome">WELCOME</string>
    <string name="username_here">Username Here</string>
    <string name="back1">BACK</string>
    <string name="log_in_here1">log in here</string>
    <string name="sandbakstitle">sandbaks</string>
    <string name="account_creationlower">account creation</string>
    <string name="city">city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stone_age">Stone Age</string>
    <string-array name="stone_age_items">
        <item>Air</item>
        <item>Animal</item>
        <item>Animal Skin</item>
        <item>Ash</item>
        <item>Atmosphere</item>
        <item>Barangay</item>
        <item>Clay</item>
        <item>Clothing</item>
        <item>Clouds</item>
        <item>Copper</item>
        <item>Corpse</item>
        <item>Family</item>
        <item>Fire</item>
        <item>Glass</item>
        <item>Human</item>
        <item>Lake</item>
        <item>Land</item>
        <item>Metallurgy</item>
        <item>Mineral</item>
        <item>Mining</item>
        <item>Mountain</item>
        <item>Mud</item>
        <item>Ocean</item>
        <item>Outer Space</item>
        <item>Paper</item>
        <item>Rain</item>
        <item>Sand</item>
        <item>Sea</item>
        <item>Soil</item>
        <item>Steam</item>
        <item>Stone</item>
        <item>Stone House</item>
        <item>Stone Tools</item>
        <item>Time</item>
        <item>Torch</item>
        <item>Vapor</item>
        <item>Volcano</item>
        <item>Water</item>
        <item>Wood</item>
    </string-array>

    <string name="bronze_age">Bronze Age</string>
    <string-array name="bronze_age_items">
        <item>Axle</item>
        <item>Brick</item>
        <item>Bronze</item>
        <item>Bronze Tools</item>
        <item>Car</item>
        <item>City</item>
        <item>Farm</item>
        <item>Field</item>
        <item>Food Stock</item>
        <item>Fossil Fuel</item>
        <item>Light</item>
        <item>Meteor</item>
        <item>Nation</item>
        <item>Steel</item>
        <item>Wheel</item>
    </string-array>

    <string name="iron_age">Iron Age</string>
    <string-array name="iron_age_items">
        <item>Beads</item>
        <item>Coins</item>
        <item>Farming Tools</item>
        <item>Iron</item>
        <item>Mallet</item>
        <item>Smithing</item>
        <item>Trade</item>
        <item>Weaponry</item>
    </string-array>

    <string name="spanish_era">Spanish Era</string>
    <string-array name="spanish_era_items">
        <item>Abacus</item>
        <item>Bahay Kubo</item>
        <item>Book</item>
        <item>Church</item>
        <item>Convent</item>
        <item>Curanderos</item>
        <item>Hospital</item>
        <item>Medicine</item>
        <item>Nipa Leaf</item>
        <item>Parish</item>
        <item>Plane</item>
        <item>Plants</item>
        <item>Religion</item>
        <item>Religious Text</item>
        <item>School</item>
        <item>Scholar</item>
        <item>Soldiers</item>
        <item>Spaniards</item>
        <item>Teachers</item>
        <item>Telephone</item>
    </string-array>

    <string name="american_era">American Era</string>
    <string-array name="american_era_items">
        <item>American</item>
        <item>Architecture</item>
        <item>Boat</item>
        <item>Computer</item>
        <item>Education</item>
        <item>English</item>
        <item>Pager</item>
        <item>Port</item>
        <item>Processed Food</item>
        <item>Rail</item>
        <item>Road</item>
    </string-array>

    <string name="japanese_occupation">Japanese Occupation</string>
    <string-array name="japanese_occupation_items">
        <item>Cotton</item>
        <item>Filipino Literature</item>
        <item>Filipino</item>
        <item>Guerilla</item>
        <item>Independence</item>
        <item>Japanese</item>
        <item>Literature</item>
        <item>Mickey Mouse Money</item>
        <item>Poems</item>
        <item>Politics</item>
        <item>Puppet Government</item>
        <item>US Army</item>
    </string-array>

    <string name="philippine_commonwealth_self_rule">Philippine Commonwealth (Self Rule)</string>
    <string-array name="philippine_commonwealth_items">
        <item>Artificial Intelligence</item>
        <item>Camera</item>
        <item>Democracy</item>
        <item>PC Chip</item>
        <item>Quantum</item>
        <item>Rocket</item>
        <item>Salt Light</item>
        <item>Satellite</item>
        <item>Screen</item>
        <item>Smart Phone</item>
        <item>Technology</item>
        <item>Television</item>
        <item>Videophone</item>
    </string-array>

    <string name="a_journey_through_time">A Journey Through Time</string>
</resources>