<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121111"
    android:backgroundTint="#050505"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="743dp"
        android:layout_height="931dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animation_file" />

    <TextView
        android:id="@+id/tvIGN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Guest"
        android:textColor="#F3F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/tvWelcome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#F1EBEB"
        android:fontFamily="@font/pwshaded"
        android:rotationX="4"
        android:shadowColor="#C4B3ED"
        android:text="@string/sandbaks"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#040303"
        android:textColorLink="#F4EFEF"
        android:textSize="80sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="#4BBDCC"
        android:text="@string/account_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="#4BBCCB"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#012327"
        android:textColorLink="#00BCD4"
        app:iconTint="#11024A53"
        app:layout_constraintBottom_toTopOf="@+id/btnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:text="WELCOME"
        android:textColor="#F6F4F4"
        app:layout_constraintBottom_toBottomOf="@+id/tvIGN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>